# molecule-ec2

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  README.rst  bindep.txt  platforms.rst  pytest.ini  requirements.txt  setup.cfg  test_requirements.yml  tox.ini
.github/workflows/: tox.yml
molecule_ec2/: driver.py
molecule_ec2/cookiecutter/: cookiecutter.json
molecule_ec2/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/: converge.yml  create.yml  destroy.yml  molecule.yml  prepare.yml
molecule_ec2/test/functional/: conftest.py  test_command.py  test_ec2.py
molecule_ec2/test/resources/playbooks/ec2/: create.yml  destroy.yml
molecule_ec2/test/scenarios/driver/ec2/molecule/default/: molecule.yml
molecule_ec2/test/scenarios/driver/ec2/molecule/multi-node/: molecule.yml
molecule_ec2/test/scenarios/driver/ec2/molecule/multi-node/tests/: test_default.py
tools/: test-setup.sh
zuul.d/: layout.yaml
