[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = molecule-ec2
url = https://github.com/ansible-community/molecule-ec2
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-ec2/issues
    Release Management = https://github.com/ansible-community/molecule-ec2/releases
    CI: Zuul = https://dashboard.zuul.ansible.com/t/ansible/builds?project=ansible-community/molecule-ec2
    Source Code = https://github.com/ansible-community/molecule-ec2
description = EC2 Molecule Plugin :: run molecule tests using AWS EC2
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    plugin
    ec2
    aws
    boto

[options]
use_scm_version = True
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    ansible >= 2.9.5
    molecule >= 3.0.2
    pyyaml >= 5.1, < 6
    boto
    boto3

[options.extras_require]
test =
    ansi2html  # soft-dependency of pytest-html
    flake8>=3.6.0, < 4

    mock>=3.0.5, < 4
    pytest>=4.6.3, < 5
    pytest-cov>=2.7.1, < 3
    pytest-helpers-namespace>=2019.1.8, < 2020
    pytest-html
    pytest-mock>=1.10.4, < 2
    pytest-plus
    pytest-verbose-parametrize>=1.7.0, < 2
    pytest-xdist>=1.29.0, < 2
    pytest-dependency
    shade>=1.31.0, < 2
    testinfra

[options.entry_points]
molecule.driver =
    ec2 = molecule_ec2.driver:EC2

[options.packages.find]
where = .

[tool:pytest]
addopts = -v -rxXs --capture=tee-sys --doctest-modules --durations 10 --color=yes
doctest_optionflags = ALLOW_UNICODE ELLIPSIS
junit_suite_name = molecule_ec2_test_suite
norecursedirs = dist doc build .tox .eggs molecule_ec2/test/scenarios molecule_ec2/test/resources
testpaths = molecule_ec2/test/
filterwarnings =
    # treat warnings as errors unless we add them below
    error
    # https://github.com/docker/docker-py/issues/2566
    ignore::DeprecationWarning:docker.*:
    # ignore::UserWarning
markers =
    extensive: marks tests that we want to skip by default, as they are indirectly covered by other tests

[flake8]
# do not add excludes for files in repo
exclude = .venv/,.tox/,dist/,build/,.eggs/
format = pylint
# E203: https://github.com/python/black/issues/315
ignore = E741,W503,W504,H,E501,E203,D102
# TODO(ssbarnea): remove temporary skips one by one:
# [D102] Missing docstring in public method
# [D104] Missing docstring in public package
# 88 is official black default:
max-line-length = 88
per-file-ignores =
  docs/conf.py: D
  molecule_ec2/test/*: D100,D103,D104
