[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = molecule-ec2
url = https://github.com/ansible-community/molecule-ec2
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-ec2/issues
    Release Management = https://github.com/ansible-community/molecule-ec2/releases
    CI: Zuul = https://dashboard.zuul.ansible.com/t/ansible/builds?project=ansible-community/molecule-ec2
    Source Code = https://github.com/ansible-community/molecule-ec2
description = EC2 Molecule Plugin :: run molecule tests using AWS EC2
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    plugin
    ec2
    aws
    boto

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    # do not use ceiling unless you already know that newer version breaks
    # do not use pre-release versions
    molecule >= 3.2
    pyyaml >= 5.1
    boto3; platform_system == "Windows"

[options.extras_require]
test =
    molecule[test]

[options.entry_points]
molecule.driver =
    ec2 = molecule_ec2.driver:EC2

[options.packages.find]
where = .
